Nueva carga de lineas

--- a/TiempoBusFirefoxOS/www/tiempobus/locales/tiempobus.ca.properties
+++ b/TiempoBusFirefoxOS/www/tiempobus/locales/tiempobus.ca.properties
@@ -2,22 +2,30 @@ l10n_actualizar = Actualitzar
 l10n_favoritos = Favorits
 l10n_guardar = Guardar
 l10n_buscador = Cercador
-l10n_preferencias = PreferËncies
+l10n_preferencias = Prefer√®ncies
 l10n_cargar_tiempos = Carregar Temps
 l10n_modificar = Modificar
 l10n_eliminar = Eliminar
 l10n_opciones = Opcions
-l10n_eliminar_preg = Est‡s segur que vols suprimir el favorit?
-l10n_cancelar = cancel∑lar
+l10n_eliminar_preg = Est√°s segur que vols suprimir el favorit?
+l10n_cancelar = cancel¬∑lar
 l10n_aceptar = Acceptar
 l10n_nuevo_fav = Nou Favorit
-l10n_titulo = TÌtol:
-l10n_descripcion = DescripciÛ:
+l10n_titulo = T√≠tol:
+l10n_descripcion = Descripci√≥:
 l10n_guardar = Guardar
-l10n_lineas = LÌnies
+l10n_lineas = L√≠nies
 l10n_ida = Anada
 l10n_vuelta = Tornada
 l10n_en_la_parada = A la parada
-l10n_sin_info = Sense informaciÛ
+l10n_sin_info = Sense informaci√≥
 l10n_y = i
 l10n_min = min.
+l10n_aviso = Esta aplicaci√≥ NO √©s oficial i es desenvolupa de forma independent.
+l10n_aviso1 = Dades de l√≠nies i temps oferits i mantinguts per: subus.es 
+l10n_aviso2 = Desenvolupament: alberapps.blogspot.com - twitter.com/alberapps
+l10n_acercade = Quant a
+l10n_aviso_ver = Esta √©s una versi√≥ preliminar i amb funcions limitades pel que fa a TiempoBus per Android
+l10n_sin_result = Sense resultats
+l10n_bienvenido = Benvinguts
+l10n_pulsa_act = Prem 'Actualitzar' per comen√ßar.
