--- a/TiempoBusFirefoxOS/www/tiempobus/locales/tiempobus.es.properties
+++ b/TiempoBusFirefoxOS/www/tiempobus/locales/tiempobus.es.properties
@@ -7,17 +7,24 @@ l10n_cargar_tiempos = Cargar Tiempos
 l10n_modificar = Modificar
 l10n_eliminar = Eliminar
 l10n_opciones = Opciones
-l10n_eliminar_preg = ¿Seguro que quieres eliminar el favorito?
+l10n_eliminar_preg = Â¿Seguro que quieres eliminar el favorito?
 l10n_cancelar = Cancelar
 l10n_aceptar = Aceptar
 l10n_nuevo_fav = Nuevo Favorito
-l10n_titulo = Título:
-l10n_descripcion = Descripción:
+l10n_titulo = TÃ­tulo:
+l10n_descripcion = DescripciÃ³n:
 l10n_guardar = Guardar
-l10n_lineas = Líneas
+l10n_lineas = LÃ­neas
 l10n_ida = Ida
 l10n_vuelta = Vuelta
 l10n_en_la_parada = En la parada
-l10n_sin_info = Sin información
+l10n_sin_info = Sin informaciÃ³n
 l10n_y = y
 l10n_min = min.
+l10n_aviso = Esta aplicaciÃ³n NO es oficial y se desarrolla de forma independiente.
+l10n_aviso1 = Datos de lÃ­neas y tiempos ofrecidos y mantenidos por: subus.es 
+l10n_aviso2 = Desarrollo: alberapps.blogspot.com - twitter.com/alberapps
+l10n_acercade = Acerca de
+l10n_sin_result = Sin resultados
+l10n_bienvenido = Bienvenido
+l10n_pulsa_act = Pulsa 'Actualizar' para empezar.
